# octo

./: .gitmodules  .pre-commit-config.yaml  pyproject.toml
examples/: 01_inference_pretrained.ipynb
octo/model/: octo_model.py
octo/utils/: typing.py
