[project]
name = "octo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.89",
    "distrax>=0.1.5",
    "dlimp",
    "einops>=0.8.1",
    "flax>=0.10.4",
    "gym>=0.26.2",
    "imageio>=2.37.0",
    "jax[cuda12]>=0.4.34",
    "mediapy>=1.2.4",
    "ml-collections>=1.1.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.11.0.86",
    "protobuf==3.20.3",
    "tensorflow==2.15.0",
    "tensorflow-probability==0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
dlimp = { git = "https://github.com/kvablack/dlimp", rev = "5edaa4691567873d495633f2708982b42edf1972" }
octo = { workspace = true }

[tool.uv.workspace]
members = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 88
force_sort_within_sections = "True"
order_by_type = "False"

# [tool.flake8]
# exclude = ".git"
# max-line-length = 88
# select = "E,F,W,C"
# ignore = "W503,E203,E731,E722,F841,E402,E741,E501,C406"


[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "wandb>=0.21.0",
]
